--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <section>
         <p><h3>1) The Speed,Distance and Time Formula</h3></p>
-        <a href= "std formula.html" >Click Formula</a>
+        <a href= "speed ,time and distance formula.html" >Click Formula</a>
         <p><h3>2) Hours, minutes And Seconds Convertion Formula</h3></p>
         <a href="Hours, minutes And Seconds.html" >Click Formula</a>
         <h3>C Basic Code</h3>
